# Radicl-Take-Home-Log-Processing

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_USAGE.md  README.md  SCHEMA.md  SPECIFY.md  council-report-20260613_150613.html  council-transcript-20260613_150613.md  justfile  main.py  memory  pyproject.toml  scripts  templates
.specify/: extension-catalogs.yml  extensions.yml  feature.json
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-metadata.json
.specify/extensions/memory-md/: config.yml
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
.specify/workflows/: workflow-registry.json
expected/: sample-output.ndjson
specs/001-log-normalizer/: data-model.md  memory-synthesis.md  plan.md  potential_enhancements.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-log-normalizer/checklists/: requirements.md
specs/001-log-normalizer/contracts/: cli-interface.md
src/: __init__.py  utils.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py  cli.py  tcp_server.py
src/adapters/outbound/: __init__.py  file_sink.py
src/domain/: __init__.py  models.py  parser.py  ports.py  utils.py
src/domain/normalizers/: syslog_cef.py  windows_event.py
src/domain/parsers/: syslog_cef.py  windows_json.py
tests/: __init__.py
tests/golden/: test_golden.py
tests/integration/: test_server.py
tests/integration/features/: ingestion.feature
tests/performance/: benchmark.py  load_test.py
tests/unit/: __init__.py  test_cli.py  test_parser.py  test_placeholder.py
