[project]
name = "backend-engineering-excercise"
version = "0.1.0"
description = "Log Normalizer Service with high-concurrency TCP listener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "rich-click>=1.9.8",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn10Warning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # One blank line before class (conflicts with D211)
    "D213",   # Multi-line docstring summary second line (conflicts with D212)
    "COM812", # Trailing comma (recommended ignore when using ruff format)
    "ISC001", # Implicit string concatenation (recommended ignore when using ruff format)
]

[tool.ruff.lint.per-file-ignores]
# Allow asserts in tests, and ignore namespace package warnings in tests/
"tests/**/*.py" = ["S101", "INP001", "SLF001", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
